# Decentralized-multi-agent-system

./: .gitignore  README.md  brainstorm_solver.py  demo.ipynb  download_dataset.py  knowledge_builder.py  main.py  multi_agent_system.py  pyproject.toml  rag_agent.py  schemas.py  solution_example.json  summarizer_agent.py
example_outputs/: solution_example2.json
settings/: agent_config.py  prompts.py  schemas.py
