[project]
name = "decentralized-multi-agent-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Khashaev Rail",email = "rail.kh.2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets (>=4.5.0,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "mistralai (>=1.11.1,<2.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
